k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coverage-api
spec:
  selector:
    app: coverage-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
